<resources>
    <string name="app_name">BarkScanner</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bark Scanner</string>
    <string name="nav_header_subtitle">barkscanner@barkscanner.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <!--Navigation Menu-->
    <string name="menu_item_cachorro">Cachorro</string>
    <string name="menu_item_latido">Gravar Latido</string>
    <string name="menu_item_cachorro_nav">Cachorros</string>
    <string name="menu_item_latido_nav">Gravar Latidos</string>
    <string name="menu_item_inicio_nav">Início</string>
    <string name="menu_item_identificar_nav">Identificar latidos</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <!--<string name="prompt_password">Senha</string>-->
    <string name="prompt_name">Nome</string>
    <string name="prompt_bairro">Bairro</string>
    <string name="prompt_cpf">CPF</string>

    <!--<string name="title_activity_main">BarkScanner</string>-->
    <string name="sair_button">Sair</string>
    <string name="sobre_button">Sobre</string>
    <string name="share_button">Compartilhe essa Ideia</string>
    <!--Facebook-->
    <string name="facebook_application_id" translatable="false">292512224795260</string>
    <string name="fb_login_protocol_scheme">fb292512224795260</string>

    <!--Gravador-->
    <string name="stop">STOP</string>
    <string name="record">RECORD</string>
    <string name="play">PLAY</string>
    <string name="stop_play">STOP PLAYNING</string>
    <string name="microfone">MIC</string>


    <string-array name="situacaoes">
        <item>COMENDO</item>
        <item>BRINCANDO</item>
        <item>PERTO DE OUTRO CACHORRO</item>
        <item>DOENTE</item>
        <item>FOME</item>
        <item>SEDE</item>
        <item>MEDO</item>
        <item>SOZINHO</item>
        <item>PASSEANDO</item>
        <item>CHAMANDO ATENÇÃO</item>
        <item>FELIZ</item>
        <item>TRISTE</item>
        <item>DORMINDO</item>
        <item>RAIVA</item>
    </string-array>
    <string-array name="porte">
        <item>GRANDE</item>
        <item>MÉDIO</item>
        <item>PEQUENO</item>
    </string-array>

    <!--Strings referentes ao cadastro de cachorro-->
    <string name="dog_name_edit">Nome do Cachorro</string>
    <string name="dog_nascimento_edit">Data de Nascimento</string>
    <string name="nome_veterinario">Nome do Veterinario</string>
    <string name="crmv_veterinario">CRMV do veterinario</string>
    <string name="gravar">CADASTRAR</string>

    <string name="bem_vindo">Olá seja bem-vindo de volta!!</string>
    <string name="enviar">ENVIAR</string>
    <string name="sobre">Este projeto faz parte de uma pesquisa no departamento de computação (DCOMP) da Universidade Federal de Sergipe (UFS) sob orientação do professor Edward David Moreno e do aluno Lucas de Oliveira Macêdo do curso de Ciência da Computação.
        O aplicativo BarkScanner tem como objetivo a captura dos latidos de cães para composição de uma base de dados que posteriormente será utilizada para classificação e identificação dos mesmos!</string>
    <string name="selecione_data">SELECONE A DATA</string>
    <string name="selecione_cachorro">SELECONE SEU CACHORRO</string>
    <string name="selecione_comportamento">SELECONE O COMPORTAMENTO</string>
    <string name="clique_gravar">CLIQUE NO MIC PARA GRAVAR</string>
    <!--CardView-->
    <string name="card_item_situacao">Situação</string>
    <string name="em_breve">Disponível em breve!</string>

</resources>
