<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_inicio"
            android:title="@string/menu_item_inicio_nav" />
        <item
            android:id="@+id/nav_latido"
            android:icon="@drawable/baseline_mic_black_24dp"
            android:title="@string/menu_item_latido_nav" />
        <item
            android:id="@+id/nav_cachorro"
            android:icon="@drawable/logo_dog_paw"
            android:title="@string/menu_item_cachorro_nav" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share_button" />
        <!--android:onClick="shareApp"-->
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/sobre_button" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sair_button" />
    </group>

</menu>
