<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_latido"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_item_latido_nav" />
        <item
            android:id="@+id/nav_cachorro"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_item_cachorro_nav" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/sobre_button" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/sair_button" />
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
