<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gravador_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <ImageView
        android:id="@+id/image_mic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="361dp"
        android:contentDescription="@string/microfone"
        android:src="@drawable/baseline_mic_black_24dp" />
    <!--android:contentDescription="TODO"-->
    <Button
        android:id="@+id/button_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_mic"
        android:layout_marginTop="37dp"
        android:text="@string/record" />
    <!--android:layout_alignParentLeft="true"-->
    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_record"
        android:layout_centerHorizontal="true"
        android:text="@string/stop" />

    <Button
        android:id="@+id/button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_stop"
        android:layout_alignParentEnd="true"
        android:text="@string/play" />
    <!--android:layout_alignParentRight="true"-->
    <Button
        android:id="@+id/button_stopPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_stop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/stop_play"

        />

    <Spinner
        android:id="@+id/spinner_situacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp" />
</RelativeLayout>