<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_latido"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/card_play_button"
                style="@android:style/Widget.Holo.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/play"
                android:padding="16dp"
                app:srcCompat="@android:drawable/ic_media_play" />

            <TextView
                android:id="@+id/card_latido_cachorro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/card_play_button"
                android:text="@string/menu_item_cachorro"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/card_latido_situacao"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_latido_cachorro"
                android:layout_toEndOf="@+id/card_play_button"
                android:text="@string/card_item_situacao"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
